k8s-configurations/00-ingress-rules-vidi.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vidi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - vidi.eastus.cloudapp.azure.com
    secretName: tls-secret-vidi
  rules:
  - host: vidi.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: vidi
          servicePort: 3000
        path: /
