k8s-configurations/00-ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gc2-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - gc2.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: gc2.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: gc2core
          servicePort: 80
        path: /
